# Blob-Prompt-Manager

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.py
blob_prompt_manager/: __init__.py  demo.py  examples.py  prompt_manager.py
blob_prompt_manager/dashboard/: README.md  __init__.py  app.py  file_explorer.py  runner.py  runner_demo.py
blob_storage_prompt_manager/: README.md  __init__.py  demo.py  examples.py
prompt2blob_vm/: __init__.py  demo.py  examples.py  version_manager.py
prompt2blob_vm/dashboard/: README.md  __init__.py  app.py  file_explorer.py  runner.py  runner_demo.py
prompts/customized/brand_2/: metric_1.yaml
tests/: README.md  __init__.py  conftest.py  test_prompt_manager.py  test_version_manager.py
